test_scores/negative_dimers/features/Q504Q3.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q504Q3.pkl.xz